@@ -1,2 +1,2 @@
-EBUILD cl-useful-meta-10.8.81.ebuild 1258 RMD160 b7b26d1e6c38fc32d7917a8ef6ccf1dc88794c4c SHA1 db921133507d3c4ee5a4d9371d869fe2ee375403 SHA256 ef56cd6bd6fd94158533d7f79cdc93db39651188085594f1c7e6d7dbdbbcd193
-MISC ChangeLog 983 RMD160 9280117f0420e10a924ff6d5f7fb91855bea1781 SHA1 8ac48ad3442284f672ae458f3dfe96e449138b25 SHA256 3c93a5387fb53c8d0fcfccf66cbb41e87cf01f15840551597c961c110bad3466
+EBUILD cl-useful-meta-10.8.81.ebuild 1241 RMD160 46b099fc716710d232bc274eac1a41e916b58fab SHA1 d722227386baccde5d2ac87c26843fee521e6b74 SHA256 ea4dce3ef5c08626f7938ecfc15a1422b3877253ba949334bab0b67eb484a550
+MISC ChangeLog 1118 RMD160 f2d77b20198bed3ece286786de375faad906e866 SHA1 9c104cd182f49f8ee8f0b4d3123747fa7bcb0c2b SHA256 e2da630cb2bfe1dea761484e297e6104e510c643d75f601cc2783b497c5e2ba9
