@@ -47,7 +47,6 @@ RDEPEND="${RDEPEND}
 	app-cdr/cdrkit
 	app-cdr/dvd+rw-tools
 	app-misc/mc
-	app-misc/screen
 	app-portage/genlop
 	app-portage/gentoolkit
 	app-portage/gentoolkit-dev
