@@ -1,2 +1,2 @@
-EBUILD css-meta-10.8.81.ebuild 896 RMD160 51c7195cdfd7497650efe4f204c905e7769081bc SHA1 fc6f30ed42d5d67e5c5a70813ec3fa51e8954da5 SHA256 0f1eb62b5150830700b7b0190d6b92906a610f1f4bf0a62c72b02436ccb04c26
-MISC ChangeLog 773 RMD160 a34523a3531123d90b634d4874d6eb453d123185 SHA1 4433efb9a2b178c99e7b0135c0db650cc824988b SHA256 5fe5581a740166e792855a4067b6aad739e31d5c970acd6e086874e30c254a05
+EBUILD css-meta-10.8.81.ebuild 944 RMD160 775262e8316359b97246d9616f00fc0ca82c44cc SHA1 ede7bf2b67e12e090092ce03ebaa447804dfefef SHA256 358db1cad8efa4053232f0da81dbae3717b8f03cc187ab5b4c5edbf0f2a0519f
+MISC ChangeLog 890 RMD160 a810a0f3cb4431465b5c952c28a77a18a6cea929 SHA1 6aa92d05c7c6cbce8ff993c4ae14ff81eb420bb8 SHA256 ff4a9da80308bdd45e08f27ca007dc50fc2996f0e6ae623270f86e48764b07b8
