@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  cl-useful-meta-10.8.81.ebuild:
+  Moved app-misc/screen to css-meta
+
 *cl-useful-meta-10.8.81 (13 Aug 2010)
 
   13 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
